fix spacing on icon buttons

--- a/projects/js-packages/ai-client/src/components/ai-control/style.scss
+++ b/projects/js-packages/ai-client/src/components/ai-control/style.scss
@@ -82,7 +82,7 @@
 		padding: 0;
 	}
 
-	.components-button {
+	.components-button-group .components-button {
 		box-shadow: none;
 		padding: 6px 8px;
 	}
